# DeskTask

./: .gitignore  GITHUB_PUBLISHING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  app_settings.example.json  daily_tasks.example.json  pyproject.toml
.github/workflows/: windows-build.yml
installer/: DeskTask.iss
scripts/: build_installer.ps1  build_windows.ps1  create_dev_shortcut.ps1
src/daily_task/: __init__.py  app.py
