[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktask"
version = "0.1.0"
description = "A small Windows desktop task panel and reminder widget."
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7"
]

[project.optional-dependencies]
tray = []

[project.scripts]
desktask = "daily_task.app:main"

[tool.setuptools.packages.find]
where = ["src"]
